src/objects/Special_Condition__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chase_within_months__c</fullName>
        <label>Chase within months</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_Name__c</fullName>
        <label>Condition Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExPat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExPat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stand_condition__c</fullName>
        <label>Stand condition</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Standard condition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Stand_condition__c</columns>
        <columns>Tags__c</columns>
        <columns>ExPat__c</columns>
        <columns>Premier__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>View</fullName>
        <columns>Condition_Name__c</columns>
        <columns>Active__c</columns>
        <columns>Stand_condition__c</columns>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Version__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Special Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard conditions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>